docs/api/qiskit/0.19/qiskit.providers.BaseBackend.mdx
---
title: BaseBackend (v0.19)
description: API reference for qiskit.providers.BaseBackend in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.BaseBackend
---

# BaseBackend

<Class id="qiskit.providers.BaseBackend" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/basebackend.py" signature="BaseBackend(configuration, provider=None)" modifiers="class">
  Base class for backends.

  Base class for backends.

  This method should initialize the module and its configuration, and raise an exception if a component of the module is not available.

  **Parameters**

  *   **configuration** ([*BackendConfiguration*](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")) – backend configuration
  *   **provider** ([*BaseProvider*](qiskit.providers.BaseProvider "qiskit.providers.BaseProvider")) – provider responsible for this backend

  **Raises**

  **QiskitError** – if an error occurred when instantiating the backend.

  ## Methods

  <span id="basebackend-configuration" />

  ### configuration

  <Function id="qiskit.providers.BaseBackend.configuration" signature="BaseBackend.configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  <span id="basebackend-name" />

  ### name

  <Function id="qiskit.providers.BaseBackend.name" signature="BaseBackend.name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    str
  </Function>

  <span id="basebackend-properties" />

  ### properties

  <Function id="qiskit.providers.BaseBackend.properties" signature="BaseBackend.properties()">
    Return the backend properties.

    **Returns**

    the configuration for the backend. If the backend does not support properties, it returns `None`.

    **Return type**

    [BackendProperties](qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties")
  </Function>

  <span id="basebackend-provider" />

  ### provider

  <Function id="qiskit.providers.BaseBackend.provider" signature="BaseBackend.provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [BaseProvider](qiskit.providers.BaseProvider "qiskit.providers.BaseProvider")
  </Function>

  <span id="basebackend-run" />

  ### run

  <Function id="qiskit.providers.BaseBackend.run" signature="BaseBackend.run(qobj)" modifiers="abstract">
    Run a Qobj on the the backend.

    **Parameters**

    **qobj** ([*Qobj*](qiskit.qobj.Qobj "qiskit.qobj.Qobj")) – the Qobj to be executed.
  </Function>

  <span id="basebackend-status" />

  ### status

  <Function id="qiskit.providers.BaseBackend.status" signature="BaseBackend.status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  <span id="basebackend-version" />

  ### version

  <Function id="qiskit.providers.BaseBackend.version" signature="BaseBackend.version()">
    Return the backend version.

    **Returns**

    the X.X.X version of the backend.

    **Return type**

    str
  </Function>
</Class>

